--- a/model_unet_nowcast.ipynb
+++ b/model_unet_nowcast.ipynb
@@ -19,14 +19,44 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "QaKjuC8WU8jx",
+        "outputId": "8408318f-a304-42b9-a377-bfedc2bce2de"
+      },
+      "source": [
+        "import sys\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "print(\"Python version: {}\\n\".format(sys.version))\n",
+        "print(\"Tensorflow version: {}\\n\".format(tf.__version__))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python version: 3.6.9 (default, Oct  8 2020, 12:12:24) \n",
+            "[GCC 8.4.0]\n",
+            "\n",
+            "Tensorflow version: 2.4.1\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "yVdzyZ3vVppX",
-        "outputId": "34afdcf9-a474-4f73-fab6-9717666e9178"
+        "outputId": "711bc5c9-01b5-44d0-978b-74fb0e0290d8"
       },
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import models\n",
-        "\n",
         "\n",
         "# U-Net architecture inspired by \"Machine Learning for Precipitation Nowcasting from Radar Images\".\n",
         "# https://ai.googleblog.com/2020/01/using-machine-learning-to-nowcast.html\n",
@@ -34,12 +64,13 @@
         "\n",
         "\n",
         "def basic_block(input_layer, n_channels):\n",
+        "    residual = layers.Conv2D(n_channels, 1, padding=\"same\")(input_layer)  # short_skip\n",
+        "\n",
         "    out_layer = layers.Conv2D(n_channels, 3, padding=\"same\")(input_layer)\n",
         "    out_layer = layers.BatchNormalization()(out_layer)\n",
         "    out_layer = layers.LeakyReLU(alpha=0.1)(out_layer)\n",
         "    out_layer = layers.Conv2D(n_channels, 3, padding=\"same\")(out_layer)\n",
         "\n",
-        "    residual = layers.Conv2D(n_channels, 1, padding=\"same\")(input_layer)  # short_skip\n",
         "    out_layer = layers.add([out_layer, residual])  # Add back residual\n",
         "\n",
         "    return out_layer\n",
@@ -50,7 +81,7 @@
         "\n",
         "    out_layer = layers.BatchNormalization()(input_layer)\n",
         "    out_layer = layers.LeakyReLU(alpha=0.1)(out_layer)\n",
-        "    out_layer = layers.MaxPooling2D(3, strides=2, padding=\"same\")(out_layer)\n",
+        "    out_layer = layers.MaxPooling2D(2, strides=2, padding=\"same\")(out_layer)\n",
         "\n",
         "    out_layer = layers.BatchNormalization()(out_layer)\n",
         "    out_layer = layers.LeakyReLU(alpha=0.1)(out_layer)\n",
@@ -116,11 +147,12 @@
         "# Free up RAM in case the model definition cells were run multiple times\n",
         "tf.keras.backend.clear_session()\n",
         "\n",
-        "# Build model\n",
-        "model = get_model(256, 256, 16, 4, is_classification=True)\n",
+        "# Build model example: \n",
+        "#          6 radar images 256x256 -> predicts 4 classes of precipitation\n",
+        "model = get_model(256, 256, 6, 4, is_classification=True)\n",
         "model.summary(line_length=120)"
       ],
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,20 +161,20 @@
             "________________________________________________________________________________________________________________________\n",
             "Layer (type)                           Output Shape               Param #       Connected to                            \n",
             "========================================================================================================================\n",
-            "input_1 (InputLayer)                   [(None, 256, 256, 16)]     0                                                     \n",
+            "input_1 (InputLayer)                   [(None, 256, 256, 6)]      0                                                     \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d (Conv2D)                        (None, 256, 256, 32)       4640          input_1[0][0]                           \n",
+            "conv2d_1 (Conv2D)                      (None, 256, 256, 32)       1760          input_1[0][0]                           \n",
             "________________________________________________________________________________________________________________________\n",
-            "batch_normalization (BatchNormalizatio (None, 256, 256, 32)       128           conv2d[0][0]                            \n",
+            "batch_normalization (BatchNormalizatio (None, 256, 256, 32)       128           conv2d_1[0][0]                          \n",
             "________________________________________________________________________________________________________________________\n",
             "leaky_re_lu (LeakyReLU)                (None, 256, 256, 32)       0             batch_normalization[0][0]               \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d_1 (Conv2D)                      (None, 256, 256, 32)       9248          leaky_re_lu[0][0]                       \n",
+            "conv2d_2 (Conv2D)                      (None, 256, 256, 32)       9248          leaky_re_lu[0][0]                       \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d_2 (Conv2D)                      (None, 256, 256, 32)       544           input_1[0][0]                           \n",
+            "conv2d (Conv2D)                        (None, 256, 256, 32)       224           input_1[0][0]                           \n",
             "________________________________________________________________________________________________________________________\n",
-            "add (Add)                              (None, 256, 256, 32)       0             conv2d_1[0][0]                          \n",
-            "                                                                                conv2d_2[0][0]                          \n",
+            "add (Add)                              (None, 256, 256, 32)       0             conv2d_2[0][0]                          \n",
+            "                                                                                conv2d[0][0]                            \n",
             "________________________________________________________________________________________________________________________\n",
             "batch_normalization_1 (BatchNormalizat (None, 256, 256, 32)       128           add[0][0]                               \n",
             "________________________________________________________________________________________________________________________\n",
@@ -263,18 +295,18 @@
             "add_7 (Add)                            (None, 2, 2, 1024)         0             conv2d_16[0][0]                         \n",
             "                                                                                conv2d_15[0][0]                         \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d_17 (Conv2D)                     (None, 2, 2, 1024)         9438208       add_7[0][0]                             \n",
+            "conv2d_18 (Conv2D)                     (None, 2, 2, 1024)         9438208       add_7[0][0]                             \n",
             "________________________________________________________________________________________________________________________\n",
-            "batch_normalization_15 (BatchNormaliza (None, 2, 2, 1024)         4096          conv2d_17[0][0]                         \n",
+            "batch_normalization_15 (BatchNormaliza (None, 2, 2, 1024)         4096          conv2d_18[0][0]                         \n",
             "________________________________________________________________________________________________________________________\n",
             "leaky_re_lu_15 (LeakyReLU)             (None, 2, 2, 1024)         0             batch_normalization_15[0][0]            \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d_18 (Conv2D)                     (None, 2, 2, 1024)         9438208       leaky_re_lu_15[0][0]                    \n",
+            "conv2d_19 (Conv2D)                     (None, 2, 2, 1024)         9438208       leaky_re_lu_15[0][0]                    \n",
             "________________________________________________________________________________________________________________________\n",
-            "conv2d_19 (Conv2D)                     (None, 2, 2, 1024)         1049600       add_7[0][0]                             \n",
+            "conv2d_17 (Conv2D)                     (None, 2, 2, 1024)         1049600       add_7[0][0]                             \n",
             "________________________________________________________________________________________________________________________\n",
-            "add_8 (Add)                            (None, 2, 2, 1024)         0             conv2d_18[0][0]                         \n",
-            "                                                                                conv2d_19[0][0]                         \n",
+            "add_8 (Add)                            (None, 2, 2, 1024)         0             conv2d_19[0][0]                         \n",
+            "                                                                                conv2d_17[0][0]                         \n",
             "________________________________________________________________________________________________________________________\n",
             "concatenate (Concatenate)              (None, 2, 2, 2048)         0             add_8[0][0]                             \n",
             "                                                                                conv2d_16[0][0]                         \n",
@@ -432,8 +464,8 @@
             "________________________________________________________________________________________________________________________\n",
             "conv2d_34 (Conv2D)                     (None, 256, 256, 4)        1156          add_15[0][0]                            \n",
             "========================================================================================================================\n",
-            "Total params: 92,256,452\n",
-            "Trainable params: 92,231,044\n",
+            "Total params: 92,253,252\n",
+            "Trainable params: 92,227,844\n",
             "Non-trainable params: 25,408\n",
             "________________________________________________________________________________________________________________________\n"
           ],
